[package]
name = "rlalgs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Reinforcement Learning Environment"

[features]
# gymnasium feature enable gymnasium dependency of rlenv that allow to use RL environments with gymnasium
gymnasium = ["rlenv/gymnasium"]

[dependencies]
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
rlenv = { path = "../rlenv"}
thiserror = "1.0.40"
