[package]
name = "rlalgs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Reinforcement Learning Environment"

[features]
# gymnasium feature enable gymnasium dependency of rlenv that allow to use RL environments with gymnasium
gymnasium = ["rlenv/gymnasium"]

[dependencies]
rlenv = { path = "../rlenv" }
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
ndarray-stats = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
colored = { workspace = true }