[package]
name = "rlalgs"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Reinforcement Learning Environment"

[features]
# gymnasium feature enable gymnasium dependency of rlenv that allow to use RL environments with gymnasium
gymnasium = ["rlenv/gymnasium"]

[dependencies]
rlenv = { path = "../rlenv" }
ndarray = { workspace = true, features = ["approx-0_5"] }
ndarray-rand = { workspace = true }
ndarray-stats = { workspace = true }
ndarray-linalg = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
colored = { workspace = true }
rand_distr = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
indicatif = "0.17.3"
keyed_priority_queue = "0.4.1"
ordered-float = "3.7.0"
approx = "0.5.1"
