[package]
name = "rlenv"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Reinforcement Learning Algorithms"

[features]
# gymnasium feature add the `gym` dependency that allows to use a lot of RL environments
gymnasium = ["dep:gym"]

[dependencies]
ndarray = "0.15.6"
# gym dependency forces the user to have installed Python and gymnasium package
# therefore, we put it as optional and it can be enabled by the package feature `gymnasium`
gym = { version = "2.2.1", optional = true }
