[package]
name = "rlenv"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Reinforcement Learning Algorithms"

[features]
# gymnasium feature add the `gym` dependency that allows to use a lot of RL environments
gymnasium = ["dep:gym-rs"]

[dependencies]
ndarray = { workspace = true }
ndarray-rand = { workspace = true }
ndarray-stats = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
colored = {workspace = true }
rand_distr = { workspace = true }
gym-rs = {version = "0.3.0", optional = true}